syntax = "proto3";

package discopanel.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nickheyer/discopanel/pkg/proto/discopanel/v1;discopanelv1";

// Support and diagnostic tools
service SupportService {
  // Create diagnostic archive
  rpc GenerateSupportBundle(GenerateSupportBundleRequest) returns (GenerateSupportBundleResponse);
  // Download diagnostic archive
  rpc DownloadSupportBundle(DownloadSupportBundleRequest) returns (DownloadSupportBundleResponse);
}

// Bundle generation options
message GenerateSupportBundleRequest {
  bool include_logs = 1;
  bool include_configs = 2;
  bool include_system_info = 3;
  repeated string server_ids = 4; // Specific servers to include, empty for all
}

// Generated bundle info
message GenerateSupportBundleResponse {
  string bundle_id = 1;
  string filename = 2;
  int64 size = 3;
  google.protobuf.Timestamp created_at = 4;
  string message = 5;
}

// Bundle download request
message DownloadSupportBundleRequest {
  string bundle_id = 1;
}

// Bundle file content
message DownloadSupportBundleResponse {
  bytes content = 1;
  string filename = 2;
  string mime_type = 3;
}
